examples/src/invalid/runTest01.alice

The looking-glass hatta ()
opened 
  x was a number.
  y was a number.
  y became x.
closed
